--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#122259</color>
+    <color name="colorPrimaryDark">#122259</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="bg_gradient_start">#9561a1</color>
+    <color name="bg_gradient_end">@color/colorPrimaryDark</color>
 </resources>
