--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,10 +6,9 @@
     android:background="@drawable/bg_gradient">
 
     <TextView
-        android:id="@+id/message"
+        android:id="@+id/tempTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Weather"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
