--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/main_dest"
-        android:name="com.anaumchik.weather.ui.weather.WeatherFragment"
+        android:name="com.anaumchik.weather.app.ui.weather.WeatherFragment"
         android:label="MainFragment"
         tools:layout="@layout/fragment_main" />
 
