create codestyle xml

--- a/app/src/main/res/drawable/ic_humidity.xml
+++ b/app/src/main/res/drawable/ic_humidity.xml
@@ -3,13 +3,13 @@
     android:height="16dp"
     android:viewportWidth="16"
     android:viewportHeight="16">
-  <path
-      android:pathData="M8,15C10.7614,15 13,12.8386 13,10.1724C13,8.102 9.9848,3.7159 8.6374,1.8591C8.3196,1.4213 7.6804,1.4213 7.3626,1.8591C6.0152,3.7159 3,8.102 3,10.1724C3,12.8386 5.2386,15 8,15Z"
-      android:strokeWidth="1.23529"
-      android:fillColor="#00000000"
-      android:fillType="evenOdd"
-      android:strokeColor="#F8F8F8"/>
-  <path
-      android:pathData="M10.2559,9.3417L10.2719,9.3477A0.8203,0.8268 66.0009,0 1,10.7437 10.4075L10.1455,11.9475A0.8203,0.8268 66.0009,0 1,9.0774 12.423L9.0614,12.417A0.8203,0.8268 66.0009,0 1,8.5896 11.3572L9.1878,9.8172A0.8203,0.8268 66.0009,0 1,10.2559 9.3417z"
-      android:fillColor="#F8F8F8"/>
+    <path
+        android:fillColor="#00000000"
+        android:fillType="evenOdd"
+        android:pathData="M8,15C10.7614,15 13,12.8386 13,10.1724C13,8.102 9.9848,3.7159 8.6374,1.8591C8.3196,1.4213 7.6804,1.4213 7.3626,1.8591C6.0152,3.7159 3,8.102 3,10.1724C3,12.8386 5.2386,15 8,15Z"
+        android:strokeWidth="1.23529"
+        android:strokeColor="#F8F8F8" />
+    <path
+        android:fillColor="#F8F8F8"
+        android:pathData="M10.2559,9.3417L10.2719,9.3477A0.8203,0.8268 66.0009,0 1,10.7437 10.4075L10.1455,11.9475A0.8203,0.8268 66.0009,0 1,9.0774 12.423L9.0614,12.417A0.8203,0.8268 66.0009,0 1,8.5896 11.3572L9.1878,9.8172A0.8203,0.8268 66.0009,0 1,10.2559 9.3417z" />
 </vector>
