--- a/app/src/main/res/drawable/ic_pressure.xml
+++ b/app/src/main/res/drawable/ic_pressure.xml
@@ -3,33 +3,33 @@
     android:height="16dp"
     android:viewportWidth="16"
     android:viewportHeight="16">
-  <path
-      android:pathData="M8,9.0435C8.6025,9.0435 9.0909,8.5763 9.0909,8C9.0909,7.4237 8.6025,6.9565 8,6.9565C7.3975,6.9565 6.9091,7.4237 6.9091,8C6.9091,8.5763 7.3975,9.0435 8,9.0435Z"
-      android:strokeWidth="0.886364"
-      android:fillColor="#00000000"
-      android:fillType="evenOdd"
-      android:strokeColor="#F8F8F8"/>
-  <path
-      android:pathData="M8,13.7391C11.3137,13.7391 14,11.1696 14,8C14,4.8304 11.3137,2.2609 8,2.2609C4.6863,2.2609 2,4.8304 2,8C2,11.1696 4.6863,13.7391 8,13.7391Z"
-      android:strokeWidth="0.886364"
-      android:fillColor="#00000000"
-      android:fillType="evenOdd"
-      android:strokeColor="#F8F8F8"/>
-  <path
-      android:pathData="M10.0681,6.0634L10.0681,6.0634A0.4091,0.3913 0,0 1,10.0681 6.6168L9.1039,7.5391A0.4091,0.3913 0,0 1,8.5254 7.5391L8.5254,7.5391A0.4091,0.3913 0,0 1,8.5254 6.9857L9.4896,6.0634A0.4091,0.3913 0,0 1,10.0681 6.0634z"
-      android:fillColor="#F8F8F8"/>
-  <path
-      android:pathData="M12.3636,8C12.3636,7.7119 12.5972,7.4783 12.8854,7.4783H13.9878C13.9945,7.4783 14,7.4837 14,7.4904V8.5096C14,8.5163 13.9945,8.5218 13.9878,8.5218H12.8854C12.5972,8.5218 12.3636,8.2882 12.3636,8Z"
-      android:fillColor="#F8F8F8"/>
-  <path
-      android:pathData="M3.6364,8C3.6364,7.7119 3.4028,7.4783 3.1146,7.4783H2.0122C2.0055,7.4783 2,7.4837 2,7.4904V8.5096C2,8.5163 2.0055,8.5218 2.0122,8.5218H3.1146C3.4028,8.5218 3.6364,8.2882 3.6364,8Z"
-      android:fillColor="#F8F8F8"/>
-  <path
-      android:pathData="M8,12.4348C8.3013,12.4348 8.5455,12.679 8.5455,12.9803L8.5455,13.9884C8.5455,13.9948 8.5402,14 8.5338,14H7.4662C7.4598,14 7.4545,13.9948 7.4545,13.9884V12.9803C7.4545,12.679 7.6988,12.4348 8,12.4348Z"
-      android:fillColor="#F8F8F8"
-      android:fillType="evenOdd"/>
-  <path
-      android:pathData="M8,3.5652C7.6988,3.5652 7.4545,3.321 7.4545,3.0198L7.4545,2.0117C7.4545,2.0052 7.4598,2 7.4662,2H8.5338C8.5402,2 8.5455,2.0052 8.5455,2.0117V3.0198C8.5455,3.321 8.3013,3.5652 8,3.5652Z"
-      android:fillColor="#F8F8F8"
-      android:fillType="evenOdd"/>
+    <path
+        android:fillColor="#00000000"
+        android:fillType="evenOdd"
+        android:pathData="M8,9.0435C8.6025,9.0435 9.0909,8.5763 9.0909,8C9.0909,7.4237 8.6025,6.9565 8,6.9565C7.3975,6.9565 6.9091,7.4237 6.9091,8C6.9091,8.5763 7.3975,9.0435 8,9.0435Z"
+        android:strokeWidth="0.886364"
+        android:strokeColor="#F8F8F8" />
+    <path
+        android:fillColor="#00000000"
+        android:fillType="evenOdd"
+        android:pathData="M8,13.7391C11.3137,13.7391 14,11.1696 14,8C14,4.8304 11.3137,2.2609 8,2.2609C4.6863,2.2609 2,4.8304 2,8C2,11.1696 4.6863,13.7391 8,13.7391Z"
+        android:strokeWidth="0.886364"
+        android:strokeColor="#F8F8F8" />
+    <path
+        android:fillColor="#F8F8F8"
+        android:pathData="M10.0681,6.0634L10.0681,6.0634A0.4091,0.3913 0,0 1,10.0681 6.6168L9.1039,7.5391A0.4091,0.3913 0,0 1,8.5254 7.5391L8.5254,7.5391A0.4091,0.3913 0,0 1,8.5254 6.9857L9.4896,6.0634A0.4091,0.3913 0,0 1,10.0681 6.0634z" />
+    <path
+        android:fillColor="#F8F8F8"
+        android:pathData="M12.3636,8C12.3636,7.7119 12.5972,7.4783 12.8854,7.4783H13.9878C13.9945,7.4783 14,7.4837 14,7.4904V8.5096C14,8.5163 13.9945,8.5218 13.9878,8.5218H12.8854C12.5972,8.5218 12.3636,8.2882 12.3636,8Z" />
+    <path
+        android:fillColor="#F8F8F8"
+        android:pathData="M3.6364,8C3.6364,7.7119 3.4028,7.4783 3.1146,7.4783H2.0122C2.0055,7.4783 2,7.4837 2,7.4904V8.5096C2,8.5163 2.0055,8.5218 2.0122,8.5218H3.1146C3.4028,8.5218 3.6364,8.2882 3.6364,8Z" />
+    <path
+        android:fillColor="#F8F8F8"
+        android:fillType="evenOdd"
+        android:pathData="M8,12.4348C8.3013,12.4348 8.5455,12.679 8.5455,12.9803L8.5455,13.9884C8.5455,13.9948 8.5402,14 8.5338,14H7.4662C7.4598,14 7.4545,13.9948 7.4545,13.9884V12.9803C7.4545,12.679 7.6988,12.4348 8,12.4348Z" />
+    <path
+        android:fillColor="#F8F8F8"
+        android:fillType="evenOdd"
+        android:pathData="M8,3.5652C7.6988,3.5652 7.4545,3.321 7.4545,3.0198L7.4545,2.0117C7.4545,2.0052 7.4598,2 7.4662,2H8.5338C8.5402,2 8.5455,2.0052 8.5455,2.0117V3.0198C8.5455,3.321 8.3013,3.5652 8,3.5652Z" />
 </vector>
