--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -62,11 +62,11 @@
         android:layout_marginTop="122dp"
         android:layout_marginEnd="4dp"
         android:includeFontPadding="false"
+        android:text="@string/weather_min_temp"
         android:textColor="@color/text_color_white"
         android:textSize="14sp"
         app:layout_constraintEnd_toStartOf="@id/minTempValueTv"
-        app:layout_constraintTop_toBottomOf="@+id/dateTv"
-        android:text="@string/weather_min_temp" />
+        app:layout_constraintTop_toBottomOf="@+id/dateTv" />
 
     <TextView
         android:id="@+id/minTempValueTv"
